--- a/application/angular.json
+++ b/application/angular.json
@@ -26,7 +26,12 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets", "src/neutralino.js"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/neutralino.js",
+              "src/tray-menu.js"
+            ],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
