--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -11,7 +11,7 @@
   },
   "nativeBlockList": [],
   "globalVariables": {
-    "TEST": "Test Value"
+    "DESKTOP_TEMPLATE_APP": "1.0.0.0"
   },
   "modes": {
     "window": {
